Add course to planner done for search

--- a/apps/courseplanner/templates/search_course.html
+++ b/apps/courseplanner/templates/search_course.html
@@ -1,152 +1,227 @@
-[[extend 'layout.html']]
+  [[extend 'layout.html']]
 
-<section class="section" id="vue-target" v-cloak>
-  <div class="container">
+  <section class="section" id="vue-target" v-cloak>
+    <div class="container">
 
-    <!--Start of search form -->
-    <div class="columns is-centered" v-if="ShowSearch">
-      <div class="column is-half ">
-        <div class="box" style="max-width: none;">
-          <h1 class="title">Course Search</h1>
-          <div id="app">
-            [[=searchForm]]
+      <!--Start of search form -->
+      <div class="columns is-centered" v-if="ShowSearch">
+        <div class="column is-half ">
+          <div class="box" style="max-width: none;">
+            <h1 class="title">Course Search</h1>
+            <div id="app">
+              [[=searchForm]]
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <!--[[pass]]-->
-    <!--end of search form -->
+      <!--[[pass]]-->
+      <!--end of search form -->
 
-    <!--Start of search results -->
-    <div class="content is-centered">
-      <h2 class="title is-4 edit-results">[[=len(results)
-        pass]] Result(s):</h2>
-      <ul>
-        [[for row in results:]]
-        <li class="result-card" ref="[[=row.id]]-card">
-          <div class="result-header">
-            <strong>[[=row.abbreviation]] [[=row.number]] - [[=row.name]]</strong>
-            <span class="result-icons">
-              [[if row.is_not_enrolled:]]
-              <a class="button" @click="addCourse([[=row.id]])" ref="[[=row.id]]-add">
-                <span class="icon"><i class="fa fa-fw fa-plus has-text-success"
-                    title="Add course to planner"></i></span>
-              </a>
-              [[pass]]
-              [[if row.is_owner:]]
-              <a class="button" href="[[=URL('course/edit', row.id)]]">
-                <span class="icon"><i class="fa fa-fw fa-pencil has-text-info" title="Edit course"></i></span>
-              </a>
-              [[pass]]
-              [[if row.is_not_enrolled:]]
-              <a class="button" @click="deleteCourse([[=row.id]])" ref="[[=row.id]]-delete">
-                <span class="icon"><i class="fa fa-fw fa-trash has-text-danger" title="Delete course"></i></span>
-              </a>
-              [[pass]]
-            </span>
-          </div>
-          <div class="result-details">
-            <p><strong>Name:</strong> [[=row.name]]</p>
-            <p><strong>Description:</strong> [[=row.description]]</p>
-            <p><strong>Credits:</strong> [[=row.credits]]</p>
-            <p>
-              <strong>Instructor:</strong>
-              <span class="icon-text">
-                <span class="icon"><i class="fa fa-fw fa-user"></i></span>
-                <span>[[=row.instructor]]</span>
+      <!--Start of search results -->
+      <div class="content is-centered">
+        <h2 class="title is-4 edit-results">[[=len(results)
+          pass]] Result(s):</h2>
+        <ul>
+          [[for row in results:]]
+          <li class="result-card" ref="[[=row.id]]-card">
+            <div class="result-header">
+              <strong>[[=row.abbreviation]] [[=row.number]] - [[=row.name]]</strong>
+              <span class="result-icons">
+                [[if row.is_not_enrolled:]]
+                <a class="button" @click="openAddCourseBox([[=row.id]],'[[=row.offering[0]]]') " ref="[[=row.id]]-add">
+                  <span class="icon"><i class="fa fa-fw fa-plus has-text-success" title="Add course to planner"></i></span>
+                </a>
+                [[pass]]
+                [[if row.is_owner:]]
+                <a class="button" href="[[=URL('course/edit', row.id)]]">
+                  <span class="icon"><i class="fa fa-fw fa-pencil has-text-info" title="Edit course"></i></span>
+                </a>
+                [[pass]]
+                [[if row.is_not_enrolled:]]
+                <a class="button" @click="deleteCourse([[=row.id]])" ref="[[=row.id]]-delete">
+                  <span class="icon"><i class="fa fa-fw fa-trash has-text-danger" title="Delete course"></i></span>
+                </a>
+                [[pass]]
+
               </span>
-            </p>
-            <p><strong>Offering(s):</strong> [[=', '.join(row.offering)]]</p>
-            <p><strong>Year:</strong> [[=row.year]]</p>
-          </div>
+            </div>
+            <div class="result-details">
+              <p><strong>Name:</strong> [[=row.name]]</p>
+              <p><strong>Description:</strong> [[=row.description]]</p>
+              <p><strong>Credits:</strong> [[=row.credits]]</p>
+              <p>
+                <strong>Instructor:</strong>
+                <span class="icon-text">
+                  <span class="icon"><i class="fa fa-fw fa-user"></i></span>
+                  <span>[[=row.instructor]]</span>
+                </span>
+              </p>
+              <p><strong>Offering(s):</strong> [[=', '.join(row.offering)]]</p>
+              <p><strong>Year:</strong> [[=row.year]]</p>
+              <div  class="course-box"  v-if="selectedCourseId == [[=row.id]]" v-cloak>
+                <div class="modal">
+                  <div class="modal-content">
+                    <div class="contact-form">
+                      <span class="close" @click="toggleCourseBox( [[=row.id]])">&times;</span>
+                      <h2>Add "[[=row.name]]" to planner</h2>
+                      <!-- Course offering and enrollment status inputs -->
+                      <div class="field">
+                        <label  class="label">Offering taken</label>
+                        <div class="select control">
+                          <select v-model="selectedOffering">
+                            <!-- Options for course offerings -->
+                            [[for offer in row.offering:]]
+                            <option>[[=offer]]</option>
+                            [[pass]]
+                          </select>
+                        </div>
+                      </div>
+                      
+                      <div class="field">
+                        <label  class="label">Enrollment Status</label>
+                        <div class="select" >
+                          <select v-model="selectedEnrollmentStatus">
+                            <option>Enrolled</option>
+                            <option>Taken</option>
+                            <option>Withdrawn</option>
+                            <option>Dropped</option>
+                          </select>
+                        </div>
+                      </div>
+                      
+                      <div class="control">
+                        <button class="button is-primary" @click="addCourse([[=row.id]])">Add course</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
 
-        </li>
-        [[pass]]
-      </ul>
+          </li>
+          [[pass]]
+        </ul>
+      </div>
     </div>
-  </div>
-  <!--end of search results -->
+    <!--end of search results -->
 
 
-</section>
+  </section>
 
-[[block page_styles]]
-<style>
-  .greyed-out {
-    color: grey;
-    pointer-events: none;
-   cursor: default;
-  }
-
-  .section {
+  [[block page_styles]]
+  <style>
+    .section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .edit-results {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+  
+    .edit-results-text {
+      font-size: smaller;
+      color: blue;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  
+    .box {
+      max-width: 400px;
+      margin: auto;
+      padding: 20px;
+    }
+  
+    .select {
+      vertical-align: inherit;
+    }
+  
+    .clickable {
+      color: blue;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  
+    .result-card {
+      margin-bottom: 20px;
+      border: 1px solid #e1e1e1;
+      border-radius: 5px;
+      padding: 10px;
+      border-color: #ddd;
+      list-style-type: none;
+    }
+  
+    .result-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #d9edf7;
+      padding: 10px;
+      border-radius: 5px 5px 0 0;
+      color: #fff;
+    }
+  
+    .result-icons {
+      display: flex;
+      align-items: center;
+    }
+  
+    .result-icons .button {
+      margin-left: 5px;
+    }
+  
+    .result-details {
+      margin-top: 10px;
+      position: relative;
+    }
+    .course-box {
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: center;
+    position: fixed;
+    z-index: 8;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
   }
 
-  .edit-results {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+  .course-box .modal {
+    display: block;
+    position: relative;
+    width: 60%;
+    margin: 50px auto;
+    background: #eee;
+    padding: 25px;
+    box-shadow: 0 2px 5px #f5f5f5;
   }
 
-  .edit-results-text {
-    font-size: smaller;
-    color: blue;
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-  .box {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-  }
-
-  .select {
-    vertical-align: inherit;
-  }
-
-  .clickable {
-    color: blue;
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-  .result-card {
+  .course-box .modal-content {
     margin-bottom: 20px;
-    border: 1px solid #e1e1e1;
-    border-radius: 5px;
-    padding: 10px;
-    border-color: #ddd;
-    list-style-type: none;
   }
 
-  .result-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #d9edf7;
-    padding: 10px;
-    border-radius: 5px 5px 0 0;
-    color: #fff;
+  .course-box .modal-content .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
   }
 
-  .result-icons {
-    display: flex;
-    align-items: center;
+  .course-box .modal-content .close:hover,
+  .course-box .modal-content .close:focus {
+    color: black;
+    text-decoration: none;
   }
 
-  .result-icons .button {
-    margin-left: 5px;
-  }
+  </style>
+  [[end]]
 
-  .result-details {
-    margin-top: 10px;
-  }
-</style>
-[[end]]
-
-[[block page_scripts]]
-<script src="js/course_search.js"></script>
-[[end]]
+  [[block page_scripts]]
+  <script src="js/course_search.js"></script>
+  [[end]]
