Enrollment History page
Added in course taken field and added deletion for course taken on enrollment history page

--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -48,7 +48,7 @@
             <div class="navbar-dropdown">
               <a class="navbar-item" href="[[=URL('course/search')]]">Search</a>
               <a class="navbar-item" href="[[=URL('course/create')]]">Create</a>
-              <a class="navbar-item" href="[[=URL('course/history')]]">History</a>
+              <a class="navbar-item" href="[[=URL('course/history')]]">Enrollment History</a>
               <a class="navbar-item" href="[[=URL('course/all')]]">All Courses</a>
             </div>
           </div>
