--- a/apps/courseplanner/templates/share.html
+++ b/apps/courseplanner/templates/share.html
@@ -54,24 +54,66 @@
 
     <div class="column is-one-third has-background-light">
       
-      <div class="field">
+      <div v-if="selected_mode == 0">
+        <button @click="selected_mode = 0" class="button is-link">Search by User</button>
+        <button @click="selected_mode = 1" class="button">Search by Major</button>
+      </div>
+      <div v-else>
+        <button @click="selected_mode = 0" class="button">Search by User</button>
+        <button @click="selected_mode = 1" class="button is-link">Search by Major</button>
+      </div>
+
+      <div class="field mt-3">
         <p class="control has-icons-right">
-          <input class="input" type="text" placeholder="Search users">
-          <span class="icon is-small is-right clickable">
+          <input class="input" type="text" v-model="query" keyup="search" placeholder="Search">
+          <span class="icon is-small is-right clickable" @click="query=&quot;&quot;">
             <i class="fa fa-times-circle"></i>
           </span>
         </p>
       </div>
       
-      <div v-for="u in users">
-        <div class="field has-addons mb-3">
-            <p class="control">
-                <button @click="getPlanners(u.user_id)" class="button">
-                <span>{{u.name}}</span>
+      <div v-if="query.length>0">
+        <div v-for="u in searched_users">
+          <div class="field has-addons mb-3">
+            <div v-if="u.user_id == selected_id">
+              <p class="control">
+                <button @click="getPlanners(u.user_id); selected_id=u.user_id;" class="button is-success">
+                <span>{{u.name}}: {{u.major}}</span>
                 </button>
-            </p>
+              </p>
+            </div>
+            <div v-else>
+              <p class="control">
+                <button @click="getPlanners(u.user_id); selected_id=u.user_id;" class="button">
+                <span>{{u.name}}: {{u.major}}</span>
+                </button>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
+      <div v-else>
+        <div v-for="u in users">
+          <div class="field has-addons mb-3">
+            <div v-if="u.user_id == selected_id">
+              <p class="control">
+                <button @click="getPlanners(u.user_id); selected_id=u.user_id;" class="button is-success">
+                <span>{{u.name}}: {{u.major}}</span>
+                </button>
+              </p>
+            </div>
+            <div v-else>
+              <p class="control">
+                <button @click="getPlanners(u.user_id); selected_id=u.user_id;" class="button">
+                <span>{{u.name}}: {{u.major}}</span>
+                </button>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      
       
 
     </div>
