--- a/apps/courseplanner/templates/layout.html
+++ b/apps/courseplanner/templates/layout.html
@@ -36,7 +36,7 @@
       <div id="the-navbar-menu" class="navbar-menu">
         <div class="navbar-start">
           <div class="navbar-brand">
-            <a class="navbar-item is-primary is-vcentered" href="[[=URL('share')]]">Share Planner</a>
+            <a class="navbar-item is-primary is-vcentered" href="[[=URL('share')]]">View a Peer's Planner</a>
           </div>
           <div class="navbar-brand">
             <a class="navbar-item is-primary is-vcentered" href="[[=URL('grades/calculator')]]">Grade Calculator</a>
